# vinted-notifier

./: .gitignore  Dockerfile  README.md  config.yaml.sample  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
vinted_notifier/: cli.py  config.py  notify.py  vinted.py
